<resources>
    <string name="app_name">Calculator</string>
    <string name="key_0">0</string>
    <string name="key_1">1</string>
    <string name="key_2">2</string>
    <string name="key_3">3</string>
    <string name="key_4">4</string>
    <string name="key_5">5</string>
    <string name="key_6">6</string>
    <string name="key_7">7</string>
    <string name="key_8">8</string>
    <string name="key_9">9</string>
    <string name="key_dot">.</string>
    <string name="key_div">/</string>
    <string name="key_add">+</string>
    <string name="key_sub">-</string>
    <string name="key_mult">*</string>
    <string name="key_c">C</string>
    <string name="key_equal">=</string>
    <string name="settings_text">SETTINGS</string>
    <string name="theme_text">Theme</string>
    <string name="main_theme_text">MAIN</string>
    <string name="red_theme_text">RED</string>
    <string name="blue_theme_text">BLUE</string>
    <string name="set_button">SET</string>
</resources>