<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    android:padding="@dimen/layout_padding">

    <TextView
        android:id="@+id/settings_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_text"
        android:textAlignment="center"
        android:textSize="@dimen/text_size"
        app:layout_constraintBottom_toTopOf="@id/theme_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/theme_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/theme_text"
        android:textSize="@dimen/text_size_2"
        app:layout_constraintBottom_toTopOf="@id/radio_group"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settings_text" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/set_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/theme_text">

        <RadioButton
            android:id="@+id/rb1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_theme_text" />

        <RadioButton
            android:id="@+id/rb2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/red_theme_text" />

        <RadioButton
            android:id="@+id/rb3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/blue_theme_text" />

    </RadioGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/set_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/set_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radio_group" />


</androidx.constraintlayout.widget.ConstraintLayout>