<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:padding="20dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/panel"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/dark_green"
        app:layout_constraintBottom_toTopOf="@+id/key_c"
        app:layout_constraintLeft_toLeftOf="@id/key_c"
        app:layout_constraintRight_toRightOf="@id/key_div"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/key_c"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:backgroundTint="@color/for_c"
        android:text="@string/key_c"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/key_1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/key_sqrt"
        app:layout_constraintTop_toBottomOf="@id/panel" />

    <Button
        android:id="@+id/key_sqrt"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:backgroundTint="@color/green"
        android:text="@string/key_sqrt"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/key_2"
        app:layout_constraintLeft_toRightOf="@id/key_c"
        app:layout_constraintRight_toLeftOf="@id/key_proc"
        app:layout_constraintTop_toBottomOf="@id/panel" />

    <Button
        android:id="@+id/key_proc"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:backgroundTint="@color/green"
        android:text="@string/key_proc"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/key_3"
        app:layout_constraintLeft_toRightOf="@id/key_sqrt"
        app:layout_constraintRight_toLeftOf="@id/key_div"
        app:layout_constraintTop_toBottomOf="@id/panel" />

    <Button
        android:id="@+id/key_div"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:backgroundTint="@color/green"
        android:text="@string/key_div"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/key_mult"
        app:layout_constraintLeft_toRightOf="@id/key_proc"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/panel" />


    <Button
        android:id="@+id/key_1"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:backgroundTint="@color/green"
        android:text="@string/key_1"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/key_4"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/key_2"
        app:layout_constraintTop_toBottomOf="@id/key_c" />

    <Button
        android:id="@+id/key_2"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:backgroundTint="@color/green"
        android:text="@string/key_2"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/key_5"
        app:layout_constraintLeft_toRightOf="@id/key_1"
        app:layout_constraintRight_toLeftOf="@id/key_3"
        app:layout_constraintTop_toBottomOf="@id/key_sqrt" />

    <Button
        android:id="@+id/key_3"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:backgroundTint="@color/green"
        android:text="@string/key_3"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/key_6"
        app:layout_constraintLeft_toRightOf="@id/key_2"
        app:layout_constraintRight_toLeftOf="@id/key_mult"
        app:layout_constraintTop_toBottomOf="@id/key_proc" />

    <Button
        android:id="@+id/key_mult"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:backgroundTint="@color/green"
        android:text="@string/key_mult"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/key_add"
        app:layout_constraintLeft_toRightOf="@id/key_3"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/key_div" />


    <Button
        android:id="@+id/key_4"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:backgroundTint="@color/green"
        android:text="@string/key_4"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/key_7"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/key_5"
        app:layout_constraintTop_toBottomOf="@id/key_1" />

    <Button
        android:id="@+id/key_5"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:backgroundTint="@color/green"
        android:text="@string/key_5"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/key_8"
        app:layout_constraintLeft_toRightOf="@id/key_4"
        app:layout_constraintRight_toLeftOf="@id/key_6"
        app:layout_constraintTop_toBottomOf="@id/key_2" />

    <Button
        android:id="@+id/key_6"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:backgroundTint="@color/green"
        android:text="@string/key_6"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/key_9"
        app:layout_constraintLeft_toRightOf="@id/key_5"
        app:layout_constraintRight_toLeftOf="@id/key_add"
        app:layout_constraintTop_toBottomOf="@id/key_3" />

    <Button
        android:id="@+id/key_add"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:backgroundTint="@color/green"
        android:text="@string/key_add"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/key_sub"
        app:layout_constraintLeft_toRightOf="@id/key_6"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/key_mult" />


    <Button
        android:id="@+id/key_7"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:backgroundTint="@color/green"
        android:text="@string/key_7"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/key_dot"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/key_8"
        app:layout_constraintTop_toBottomOf="@id/key_4" />

    <Button
        android:id="@+id/key_8"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:backgroundTint="@color/green"
        android:text="@string/key_8"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/key_0"
        app:layout_constraintLeft_toRightOf="@id/key_7"
        app:layout_constraintRight_toLeftOf="@id/key_9"
        app:layout_constraintTop_toBottomOf="@id/key_5" />

    <Button
        android:id="@+id/key_9"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:backgroundTint="@color/green"
        android:text="@string/key_9"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/key_fact"
        app:layout_constraintLeft_toRightOf="@id/key_8"
        app:layout_constraintRight_toLeftOf="@id/key_sub"
        app:layout_constraintTop_toBottomOf="@id/key_6" />

    <Button
        android:id="@+id/key_sub"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:backgroundTint="@color/green"
        android:text="@string/key_sub"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/key_equal"
        app:layout_constraintLeft_toRightOf="@id/key_9"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/key_add" />


    <Button
        android:id="@+id/key_dot"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:backgroundTint="@color/green"
        android:text="@string/key_dot"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/key_0"
        app:layout_constraintTop_toBottomOf="@id/key_7" />

    <Button
        android:id="@+id/key_0"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:backgroundTint="@color/green"
        android:text="@string/key_0"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/key_dot"
        app:layout_constraintRight_toLeftOf="@id/key_fact"
        app:layout_constraintTop_toBottomOf="@id/key_8" />

    <Button
        android:id="@+id/key_fact"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:backgroundTint="@color/green"
        android:text="@string/key_fact"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/key_0"
        app:layout_constraintRight_toLeftOf="@id/key_equal"
        app:layout_constraintTop_toBottomOf="@id/key_9" />

    <Button
        android:id="@+id/key_equal"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:backgroundTint="@color/green"
        android:text="@string/key_equal"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/key_fact"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/key_9" />
</androidx.constraintlayout.widget.ConstraintLayout>